MANVIR SANDBOX/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>PhoneAffected__c</fullName>
        <label>Phone # Affected</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ProductService__c</fullName>
        <label>Product/Service</label>
        <picklist>
            <picklistValues>
                <fullName>Product A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice and Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SwitchType__c</fullName>
        <label>Switch Type</label>
        <picklist>
            <picklistValues>
                <fullName>Class 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSLAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Class 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Router</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical Switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BillingQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>Billing Queue</label>
        <queue>BillingQueue</queue>
    </listViews>
    <listViews>
        <fullName>FieldContractorQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>Field Contractor Queue</label>
        <queue>FieldContractorQueue</queue>
    </listViews>
    <listViews>
        <fullName>InstallationQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>Installation Queue</label>
        <queue>InstallationQueue</queue>
    </listViews>
    <listViews>
        <fullName>LECEscalationQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>LEC Escalation Queue</label>
        <queue>LECEscalationQueue</queue>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>NOCQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>NOC Queue</label>
        <queue>NOCQueue</queue>
    </listViews>
    <listViews>
        <fullName>Postinstallationqueue</fullName>
        <filterScope>Queue</filterScope>
        <label>Post-installation queue</label>
        <queue>Postinstallationqueue</queue>
    </listViews>
    <listViews>
        <fullName>TerminationQueue</fullName>
        <filterScope>Queue</filterScope>
        <label>Termination Queue</label>
        <queue>TerminationQueue</queue>
    </listViews>
</CustomObject>